--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 pybullet>=3.2.5
+pybullet-data  # For pybullet resources
 numpy>=1.21.0
 pytest>=7.0.0  # For testing
 matplotlib>=3.4.0  # For visualization
 pillow>=8.3.0  # For image processing
 scipy>=1.7.0  # For calculations
 tqdm>=4.65.0  # For progress bars
+gym>=0.26.0  # For training environment
+torch>=2.0.0  # For neural networks and training
+tensorboard>=2.12.0  # For training visualization
